--- a/public/index.html
+++ b/public/index.html
@@ -8,32 +8,33 @@
 	<title>THE ORIENT</title>
 </head>
 <body>
-	<div class="main">
+	<div id="main">
 		<p>EST. 1978</p>
 		<h1>THE ORIENT</h1>
 	</div>
 	<div class="menu">
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
-			<a href=""><li>LUNCH SPECIAL</li></a>
+			<a href="menu/lunch.html"><li>LUNCH</li></a>
 			<a href="menu/main.html"><li>MENU</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="intro">
-		<h1> <span> << </span> &nbsp; hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
+	<div id="intro">
+		<h1 style="font-family: 'Oswald', sans-serif;">
+			<span> << </span> &nbsp; hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
 		</h1>
 		<hr>
 		<p> Wait, this doesn't look like a website for a restaurant at all! <br> 
 			<br> We get that a lot. <br><br> But hey, why get stuck in the limbo? Go check out our <b>awesome menu</b> and give us a call!
 		</p>
 	</div>
-	<div class="aboutus">
-		<div class="title">
+	<div id="aboutus">
+		<div id="title">
 			<p> a little blurb about us </p>
 		</div>
-		<div class="blurb">
+		<div id="blurb">
 			<p> <b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 29 years of practice!</p>
 		</div>
 	</div>
@@ -41,17 +42,17 @@
 		<div class="service-card" style="order: 1">
 			<div class="service-icon" style="background-image: url('../res/icons/svg/013-noodles.svg')"></div>
 			<h1> LUNCH </h1>
-			<p>Make your own combo from a list of great entrees and complete it with an appetizer or drink!</p>
+			<p>Lunch service from <b>opening to 2:30pm</b> every day! Make your own combo from a am exciting list of entrees!</p>
 			<form action="menu/lunch.html">
-				<button><strong> >> lunch menu </strong></button>
+				<button> &#9655; &nbsp; LUNCH MENU </button>
 			</form>
 		</div>
 		<div class="service-card" style="order: 2">
 			<div class="service-icon" style="background-image: url('../res/icons/svg/010-take-away.svg')"></div>
 			<h1> TAKE-OUT </h1>
-			<p>10% off on ALL ORDERS over $25, yay! Check out menu and take some of that lovely lovely food home!</p>
+			<p><b>10% off on ALL ORDERS over $25, yay!</b> Check out menu and take some of that lovely lovely food home!</p>
 			<form action="menu/appetizer+soup.html">
-				<button><strong> >> all-day menu </strong></button>
+				<button> &#9655; &nbsp; ALL-DAY MENU </button>
 			</form>
 		</div>
 		<div class="service-card" style="order: 3">
@@ -60,8 +61,34 @@
 			<h1> DELIVERY </h1>
 			<p>Delivery service from <b> 4pm - 8pm </b> every day! Obtain some fantastic chow without leaving the house!</p>
 			<form action="contact.html">
-				<button><strong> >> contact us </strong></button>
+				<button>&#9655; &nbsp; CONTACT US</button>
 			</form>
 		</div>
+	</div>
+	<div class="infosection">
+		<div class="title"><p>HOURS + STUFF</p></div>
+		<div class="info">
+			<h1 style="font-size: 38px; color: #333333;"> THE ORIENT ON PANDOSY </h1>
+			<p> OPEN EVERYDAY </p>
+			<br>
+			<p>MON-FRI : 11AM - 9PM</p>
+			<p>SAT-SUN : 12PM - 9PM</p>
+			<br>
+			<p> [ 250-763-2988 ] &nbsp; &nbsp; &nbsp; [ 250-763-2986 ] </p>
+			<br>
+		</div>
+		<a href="contact.html"></a>
+	</div>
+	<div class="footer menu">
+		<ul>
+			<a href="index.html"><li>HOME</li></a>
+			<a href=""><li>LUNCH SPECIAL</li></a>
+			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="note.html"><li>NOTE</li></a>
+		</ul>
+	</div>
+	<div class="finalnote" style="margin-bottom: 25px;">
+		<p>Copyright &copy; 2016 The Orient Restaurant . All rights reserved . Icons designed by <a href="www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
