fixed + cleaned up index page draft

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 	</div>
 	<div id="intro">
 		<h1 style="font-family: 'Oswald', sans-serif;">
-			<span> << </span> &nbsp; hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
+			<span> << &nbsp;</span> hi. we are yet another local asian restaurant. &nbsp; <span> >> </span> 
 		</h1>
 		<hr>
 		<p> Wait, this doesn't look like a website for a restaurant at all! <br> 
@@ -34,13 +34,14 @@
 		<div id="title">
 			<p> a little blurb about us </p>
 		</div>
-		<div id="blurb">
-			<p> <b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 29 years of practice!</p>
-		</div>
+		<p id="blurb"> 
+			<b>THE ORIENT</b> is a local family restaurant that first opened in Kelowna, BC in 1979. Currently run by the second generation, we think that we are pretty good at cooking up delicious and satisfying meals after 39 years of practice!
+		</p>
 	</div>
 	<div class="services">
-		<div class="service-card" style="order: 1">
-			<div class="service-icon" style="background-image: url('../res/icons/svg/013-noodles.svg')"></div>
+		<div class="service-card" id="first-card" style="order: 1;">
+			<div class="service-icon" style="background-image: url('../res/icons/svg/013-noodles.svg')">
+			</div>
 			<h1> LUNCH </h1>
 			<p>Lunch service from <b>opening to 2:30pm</b> every day! Make your own combo from a am exciting list of entrees!</p>
 			<form action="menu/lunch.html">
@@ -48,7 +49,8 @@
 			</form>
 		</div>
 		<div class="service-card" style="order: 2">
-			<div class="service-icon" style="background-image: url('../res/icons/svg/010-take-away.svg')"></div>
+			<div class="service-icon" style="background-image: url('../res/icons/svg/010-take-away.svg')">
+			</div>
 			<h1> TAKE-OUT </h1>
 			<p><b>10% off on ALL ORDERS over $25, yay!</b> Check out menu and take some of that lovely lovely food home!</p>
 			<form action="menu/appetizer+soup.html">
@@ -57,7 +59,8 @@
 		</div>
 		<div class="service-card" style="order: 3">
 			<div class="service-icon" style="background-image: url('../res/icons/svg/002-delivery-1.svg'); 
-			 background-size: 58px;"></div>
+			 background-size: 58px;">
+			 </div>
 			<h1> DELIVERY </h1>
 			<p>Delivery service from <b> 4pm - 8pm </b> every day! Obtain some fantastic chow without leaving the house!</p>
 			<form action="contact.html">
@@ -74,7 +77,8 @@
 			<p>MON-FRI : 11AM - 9PM</p>
 			<p>SAT-SUN : 12PM - 9PM</p>
 			<br>
-			<p> [ 250-763-2988 ] &nbsp; &nbsp; &nbsp; [ 250-763-2986 ] </p>
+			<p> [ 250-763-2988 ] </p>
+			<p> [ 250-763-2986 ] </p>
 			<br>
 		</div>
 		<a href="contact.html"></a>
@@ -89,6 +93,6 @@
 		</ul>
 	</div>
 	<div class="finalnote" style="margin-bottom: 25px;">
-		<p>Copyright &copy; 2016 The Orient Restaurant . All rights reserved . Icons designed by <a href="www.flaticon.com">Flaticon</a></p>
+		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
