style changes to index page; completed contact page draft

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet" text="text/css">
 
 	<link href="styles.css" rel="stylesheet" type="text/css">
+	<script src="loose-scripts.js"></script>
 	<title>THE ORIENT</title>
 </head>
 <body>
@@ -71,14 +72,17 @@
 	<div class="infosection">
 		<div class="title"><p>HOURS + STUFF</p></div>
 		<div class="info">
-			<h1 style="font-size: 38px; color: #333333;"> THE ORIENT ON PANDOSY </h1>
-			<p> OPEN EVERYDAY </p>
+			<h1>THE ORIENT ON PANDOSY</h1>
+			<p> #101 - 2689 Pandosy Street </p>
 			<br>
-			<p>MON-FRI : 11AM - 9PM</p>
-			<p>SAT-SUN : 12PM - 9PM</p>
+			<p><b> OPEN EVERYDAY </b></p>
+			<p>mon-fri : 11AM - 9PM</p>
+			<p>sat-sun : 12PM - 9PM</p>
 			<br>
-			<p> [ 250-763-2988 ] </p>
-			<p> [ 250-763-2986 ] </p>
+			<p><b> HOLIDAY HOURS </b></p>
+			<p> 4PM - 9PM </p>
+			<br>
+			<p><b>250-763-2988 &nbsp;</b>//<b>&nbsp; 250-763-2986</b></p>
 			<br>
 		</div>
 		<a href="contact.html"></a>
