stylistic changes; added new icon + menu section

--- a/public/contact.html
+++ b/public/contact.html
@@ -26,8 +26,8 @@
 		<iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCnbZqKCl8EOFnamzdPlYozkHeQClDx1aU&q=place_id:ChIJr5iQbU-LfVMRoyszKl1bxqs" allowfullscreen></iframe>
 	</div>
 	<div class="infosection">
-		<div class="title" style="border-color: white;"><p>CONTACT</p></div>
-		<div class="info" style="margin-bottom: 25px;">
+		<div class="title"><p>HOURS + STUFF</p></div>
+		<div class="info">
 			<h1>THE ORIENT ON PANDOSY</h1>
 			<p> #101 - 2689 Pandosy Street </p>
 			<br>
@@ -38,9 +38,13 @@
 			<p><b> HOLIDAY HOURS </b></p>
 			<p> 4PM - 9PM </p>
 			<br>
-			<p><b>250-763-2988 &nbsp;</b>//<b>&nbsp; 250-763-2986</b></p>
+			<p class="phone">
+				<a href="tel:+1-250-763-2988">250-763-2988</a>&nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
+			</p>
+			<br>
 			<br>
 		</div>
+		<a id="contact-icon" href="contact.html"></a>
 	</div>
 		<div class="footer menu">
 		<ul>
