--- a/public/index.html
+++ b/public/index.html
@@ -83,10 +83,13 @@
 			<p><b> HOLIDAY HOURS </b></p>
 			<p> 4PM - 9PM </p>
 			<br>
-			<p><b>250-763-2988 &nbsp;</b>//<b>&nbsp; 250-763-2986</b></p>
+			<p class="phone">
+				<a href="tel:+1-250-763-2988">250-763-2988</a>&nbsp;//&nbsp; <a href="tel:+1-250-763-2986">250-763-2986</a>
+			</p>
+			<br>
 			<br>
 		</div>
-		<a href="contact.html"></a>
+		<a id="contact-icon" href="contact.html"></a>
 	</div>
 	<div class="footer menu">
 		<ul>
@@ -97,7 +100,7 @@
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" style="margin-bottom: 25px;">
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
