--- a/public/note.html
+++ b/public/note.html
@@ -33,7 +33,7 @@
 		THANKS FOR VISITING US TODAY!
 		</p>
 	</div>
-	<form action="https://fncontact.com/THEORI/post" method="post">
+	<form action="https://fncontact.com/THEORI/post" method="post" id="note-form">
 		<input type="hidden" name="url_success" value="http://theorientkelowna.com/afternote.html" /> 
 		<input type="hidden" name="url_error" value="http://theorientkelowna.com/nonafternote.html"/>
 		<input class="formtext" type="text" name="name" placeholder="[ name here ]" style="margin-bottom: 15px;"/>
@@ -50,7 +50,7 @@
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" style="margin-bottom: 25px;">
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
