minor stylistic changes; added appetizer+soup page; added notepad icons

--- a/public/contact.html
+++ b/public/contact.html
@@ -27,7 +27,7 @@
 	</div>
 	<div class="infosection">
 		<div class="title"><p>HOURS + STUFF</p></div>
-		<div class="info">
+		<div class="info" style="margin-bottom: 25px;">
 			<h1>THE ORIENT ON PANDOSY</h1>
 			<p> #101 - 2689 Pandosy Street </p>
 			<br>
@@ -44,7 +44,6 @@
 			<br>
 			<br>
 		</div>
-		<a id="contact-icon" href="contact.html"></a>
 	</div>
 		<div class="footer menu">
 		<ul>
@@ -55,7 +54,7 @@
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" style="margin-bottom: 25px;">
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
