--- a/public/note.html
+++ b/public/note.html
@@ -24,6 +24,8 @@
 		</ul>
 	</div>
 	<div class="forminfo">
+		<div class="service-icon" style="background-image: url('../res/icons/svg/020-notepad-1.svg')">
+		</div>
 		<div class="title">
 			<p>HELLO AGAIN</p>
 		</div>
