--- a/public/nonafternote.html
+++ b/public/nonafternote.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div id="main">
-		<p>[ NOTE ]</p>
+		<p>EST. 1978</p>
 		<h1>THE ORIENT</h1>
 	</div>
 	<div class="menu">
@@ -24,8 +24,10 @@
 		</ul>
 	</div>
 	<div class="forminfo">
+		<div class="service-icon" style="background-image: url('../res/icons/svg/020-notepad-1.svg')">
+		</div>
 		<div class="title">
-			<p> ERROR : PLEASE TRY AGAIN! </p>
+			<p><b>ERROR!</b> PLEASE TRY AGAIN!</p>
 		</div>
 		<p>
 		this is the place to send us a quick anonymous note regarding almost anything.<br>
@@ -33,7 +35,7 @@
 		THANKS FOR VISITING US TODAY!
 		</p>
 	</div>
-	<form action="https://fncontact.com/THEORI/post" method="post">
+	<form action="https://fncontact.com/THEORI/post" method="post" id="note-form">
 		<input type="hidden" name="url_success" value="http://theorientkelowna.com/afternote.html" /> 
 		<input type="hidden" name="url_error" value="http://theorientkelowna.com/nonafternote.html"/>
 		<input class="formtext" type="text" name="name" placeholder="[ name here ]" style="margin-bottom: 15px;"/>
@@ -50,7 +52,7 @@
 			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
-	<div class="finalnote" style="margin-bottom: 25px;">
+	<div class="finalnote">
 		<p>Copyright &copy; 2018 The Orient Restaurant . All rights reserved . Icons designed by <a href="https://www.flaticon.com">Flaticon</a></p>
 	</div>
 </body>
