added all main menu drafts; minor stylistic changes; fixed menu links

--- a/public/menu/friedrice+chowmein.html
+++ b/public/menu/friedrice+chowmein.html
@@ -58,79 +58,88 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> APPETIZERS + SOUP </p>
+		<p> FRIED RICE + CHOW MEIN </p>
 	</div>
 	<div id="contentAS">
-
 		<section class="content">
-			<h1> APPETIZERS </h1>
+
+			<h1> FRIED RICE </h1>
 			<div class="column">
 				<div class="item">
-					<p>POT STICKERS &nbsp;[6] <span>$5.95</span></p>
-					<p class="desc">pan-fried pork and vegetable dumplings</p>
+					<p>HOUSE SPECIAL FRIED RICE <span>$12.95</span></p>
+					<p class="desc">fried rice with shrimp, pork, chicken, and assorted veggies</p>
 				</div>
 				<div class="item">
-					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
-					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
+					<p>FRIED RICE <span>$10.95</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					fried rice + topping of your choice + assorted veggies</p>
 				</div>
 				<div class="item" style="border:none;">
-					<p>DEEP FRIED WON TON <span>$7.95</span></p>
-					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
+					<p>STEAMED RICE <span>$2/small &nbsp; &nbsp; $4.5/large</span></p>
 				</div>
 			</div>
 			<div class="column" style="float: right;">
 				<div class="item">
-					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
-					<p class="desc">house-made pork &amp; vegetable spring roll</p>
+					<p>TOMATO FRIED RICE <span>$12.50</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					fried rice + topping of your choice + assorted veggies + tomato sauce</p>
 				</div>
-				<div class="item" style="border: none;">
-					<p>COMBO PLATTER <span>$16.95</span></p>
-					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
+				<div class="item" style="border:none;">
+					<p>CURRY SAUCE FRIED RICE <span>$12.50</span></p>
+					<p class="desc"><strong>choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					fried rice + topping of your choice + assorted veggies + curry sauce</p>
 				</div>
 			</div>
 		</section>
 
 		<section class="content" style="margin-top: 80px;">
-			<h1> SOUPS </h1>
+			<h1> CHOW MEIN</h1> 
 			<div class="column">
 				<div class="item">
-					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span></p>
-					<p class="desc">home-made pork won tons in a light broth</p>
+					<p>HOUSE SPECIAL CHOW MEIN <span>$12.95</span></p>
+					<p class="desc"> chow mein topped with shrimp, pork, chicken, and assorted veggies</p>
 				</div>
 				<div class="item">
-					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
-					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
+					<p>CHOW MEIN <span>$10.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					chow mein + topping of your choice + assorted veggies
+					</p>
 				</div>
 				<div class="item" style="border:none;">
-					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
-					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
+					<p>TOMATO SAUCE CHOW MEIN <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP
+					</strong> <br><br>
+					chow mein + topping of your choice + assorted veggies + tomato sauce </p>
 				</div>
 			</div>
 			<div class="column" style="float: right;">
 				<div class="item">
-					<p>NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
-					<br><br>
-					egg noodles + your choice of topping + soup </p>
+					<p>CANTONESE-STYLE CHOW MEIN [ crispy ] <span>$13.50</span></p>
+					<p class="desc"> crispy chow mein topped with stir-fried shrimp, pork, chicken, and assorted diced vegetables </p>
 				</div>
 				<div class="item">
-					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc">egg noodles + won tons + soup </p>
+					<p>CHINESE-STYLE CHOW MEIN [ crispy ] <span>$13.50</span></p>
+					<p class="desc"> crispy chow mein topped with stir-fried shrimp, pork, chicken, shitake mushrooms, and assorted julienned vegetables </p>
+				</div>
+				<div class="item">
+					<p>SHANGHAI NOODLES <span>$12.50</span></p>
+					<p class="desc"> stir-fried shanghai noodles with chicken and assorted veggies </p>
 				</div>
 				<div class="item" style="border:none;">
-					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
-					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
+					<p>PLAIN CHOW MEIN <span>$3/small &nbsp; &nbsp; $6.5/large</span></p>
 				</div>
 			</div>
 		</section>
 	</div>
 	<div class="footer menu" style="margin-top: 40px;">
 		<ul>
-			<a href="../index.html"><li>HOME</li></a>
-			<a href="lunch.html"><li>LUNCH</li></a>
-			<a href="appetizers+soup.html"><li>MENU</li></a>
-			<a href="../contact.html"><li>CONTACT</li></a>
-			<a href="../note.html"><li>NOTE</li></a>
+			<a href="index.html"><li>HOME</li></a>
+			<a href=""><li>LUNCH</li></a>
+			<a href="menu/main.html"><li>MENU</li></a>
+			<a href="contact.html"><li>CONTACT</li></a>
+			<a href="note.html"><li>NOTE</li></a>
 		</ul>
 	</div>
 	<div class="finalnote" >
