--- a/public/menu/pork+chicken.html
+++ b/public/menu/pork+chicken.html
@@ -58,69 +58,84 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> APPETIZERS + SOUP </p>
+		<p> PORK + CHICKEN </p>
 	</div>
 	<div id="contentAS">
-
 		<section class="content">
-			<h1> APPETIZERS </h1>
+			<h1> PORK </h1>
+
 			<div class="column">
 				<div class="item">
-					<p>POT STICKERS &nbsp;[6] <span>$5.95</span></p>
-					<p class="desc">pan-fried pork and vegetable dumplings</p>
+					<p>SWEET &amp; SOUR PORK <span>$11.50</span></p>
+					<p class="desc">fried boneless pork with our made-from-scratch sweet &amp; sour sauce </p>
 				</div>
 				<div class="item">
-					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
-					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
+					<p>DRY GARLIC PORK <span>$11.50</span></p>
+					<p class="desc"> fried boneless pork lightly seasoned with garlic salt </p>
 				</div>
-				<div class="item" style="border:none;">
-					<p>DEEP FRIED WON TON <span>$7.95</span></p>
-					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
+				<div class="item">
+					<p>HONEY &amp; GARLIC PORK <span>$11.95</span></p>
+					<p class="desc"> fried boneless pork with our secret honey-garlic sauce </p>
+				</div>
+				<div class="item">
+					<p>BBQ PORK [ sliced ] <span>$11.95</span></p>
+					<p class="desc"> slow-roasted marinated pork topped off with a light sweet glaze </p>
 				</div>
 			</div>
+
 			<div class="column" style="float: right;">
 				<div class="item">
-					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
-					<p class="desc">house-made pork &amp; vegetable spring roll</p>
+					<p>SWEET &amp; SOUR SPARERIBS <span>$11.50</span></p>
+					<p class="desc"> fried pork spareribs with our made-from-scratch sweet &amp; sour sauce </p>
 				</div>
-				<div class="item" style="border: none;">
-					<p>COMBO PLATTER <span>$16.95</span></p>
-					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
+				<div class="item">
+					<p>DRY GARLIC SPARERIBS <span>$11.50</span></p>
+					<p class="desc">fried pork spareribs lightly seasoned with garlic salt</p>
+				</div>
+				<div class="item" style="broder:none;">
+					<p>HONEY &amp; GARLIC SPARERIBS <span>$11.95</span></p>
+					<p class="desc">fried pork spareribs with our secret honey-garlic sauce</p>
 				</div>
 			</div>
 		</section>
 
 		<section class="content" style="margin-top: 80px;">
-			<h1> SOUPS </h1>
+			<h1> CHICKEN </h1>
+
 			<div class="column">
 				<div class="item">
-					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span></p>
-					<p class="desc">home-made pork won tons in a light broth</p>
+					<p>DEEP FRIED ALMOND CHICKEN <span>$11.50</span></p>
+					<p class="desc">deep-fried chicken breasts sprinkled with a dry sweet almond topping </p>
 				</div>
 				<div class="item">
-					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
-					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
+					<p>SWEET &amp; SOUR CHICKEN BALLS <span>$12.50</span></p>
+					<p class="desc">deep-fried chicken cubes paired with our made-from-scratch sweet &amp; sour sauce </p>
+				</div>
+				<div class="item">
+					<p>STIR-FRIED CHICKEN &amp; VEGETABLES <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BLACK BEAN SAUCE / CURRY SAUCE </strong> <br><br>
+					stir-fried diced chicken + your choice of sauce + assorted vegetables </p>
 				</div>
 				<div class="item" style="border:none;">
-					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
-					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
+					<p>HONEY GARLIC SEASAME CHICKEN <span>$13.95</span></p>
+					<p class="desc"> deep-fried diced chicken paired with our secret honey-garlic sauce and spinkled with seasame</p>
 				</div>
 			</div>
+
 			<div class="column" style="float: right;">
 				<div class="item">
-					<p>NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
-					<br><br>
-					egg noodles + your choice of topping + soup </p>
+					<p>DEEP FRIED CHICKEN WINGS <span>$11.50</span></p>
+					<p class="desc"> chicken wings coated with our uniquely seasoned batter and deep-fried </p>
 				</div>
 				<div class="item">
-					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc">egg noodles + won tons + soup </p>
+					<p>HONEY GARLIC CHICKEN WINGS <span>$11.95</span></p>
+					<p class="desc"> our classic chicken wings topped off with a sweet honey-garlic sauce</p>
 				</div>
 				<div class="item" style="border:none;">
-					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
-					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
+					<p>HOT &amp; SPICY CHICKEN WINGS <span>$11.95</span></p>
+					<p class="desc"> our classic chicken wings seasoned with hot chilis and topped off with peppers and onions </p>
 				</div>
+				
 			</div>
 		</section>
 	</div>
