--- a/public/menu/chopsuey+eggfooyung.html
+++ b/public/menu/chopsuey+eggfooyung.html
@@ -58,68 +58,68 @@
 		</ul>
 	</div>
 	<div class="menu title">
-		<p> APPETIZERS + SOUP </p>
+		<p> CHOP SUEY + EGG FOO YUNG </p>
 	</div>
 	<div id="contentAS">
-
 		<section class="content">
-			<h1> APPETIZERS </h1>
+			<h1> CHOP SUEY </h1>
+
 			<div class="column">
 				<div class="item">
-					<p>POT STICKERS &nbsp;[6] <span>$5.95</span></p>
-					<p class="desc">pan-fried pork and vegetable dumplings</p>
+					<p>HOUSE SPECIAL CHOP SUEY <span>$12.95</span></p>
+					<p class="desc"> stir-fried mixed veggies with shrimp, pork, and chicken </p>
 				</div>
 				<div class="item">
-					<p>FRESH DRY SPARERIBS <span>$7.95</span></p>
-					<p class="desc">fried spareribs seasoned lightly with garlic salt</p>
+					<p>CHOP SUEY <span>$10.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / MUSHROOM / PORK / SHRIMP / VEGGIE </strong> <br><br>
+					stir-fried mixed veggies + topping of choice </p>
 				</div>
-				<div class="item" style="border:none;">
-					<p>DEEP FRIED WON TON <span>$7.95</span></p>
-					<p class="desc">fried won tons with a side of sweet &amp; sour sauce</p>
-				</div>
-			</div>
-			<div class="column" style="float: right;">
 				<div class="item">
-					<p>SPRING ROLL &nbsp;[1] <span>$2.50</span></p>
-					<p class="desc">house-made pork &amp; vegetable spring roll</p>
+					<p>BEEF CHOW BROCOLLI <span>$11.50</span></p>
+					<p class="desc">stir-fried brocolli and beef, with carrots and onions. a popular classic </p>
 				</div>
 				<div class="item" style="border: none;">
-					<p>COMBO PLATTER <span>$16.95</span></p>
-					<p class="desc">a platter of assorted fried delights. <br><br>includes dry ribs + chicken wings + spring rolls + deep fried prawns + deep fried chicken balls </p>
+					<p>ALMOND GAI DING <span>$12.95</span></p>
+					<p class="desc">stir-fried diced chicken with almonds and assorted veggies</p>
+				</div>
+			</div>
+
+			<div class="column" style="float: right;">
+				<div class="item">
+					<p>TOMATO SAUCE CHOP SUEY <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
+					stir-fried mixed veggies + topping of choice + tomato sauce </p>
+				</div>
+				<div class="item">
+					<p>CURRY SAUCE CHOP SUEY <span>$12.50</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP </strong> <br><br>
+					stir fried mixed veggies + topping of choice + curry sauce </p>
+				</div>
+				<div class="item">
+					<p> STIR-FRIED SNOW PEAS <span>$12.95</span></p>
+					<p class="desc"><strong> choose one: BEEF / CHICKEN / SHRIMP / SQUID </strong> <br><br>
+					stif-fried snow peas + topping of choice + assorted veggies </p>
+				</div>
+				<div class="item" style="border:none;">
+					<p> BEEF &amp; GREEN PEPPERS w/ BLACK BEAN SAUCE <span>$11.50</span></p>
+					<p class="desc">beef + green peppers stir-fried with carrots and onions in a black bean sauce </p>
 				</div>
 			</div>
 		</section>
 
-		<section class="content" style="margin-top: 80px;">
-			<h1> SOUPS </h1>
+		<section class="content" style="margin-top: 130px;">
+			<h1> EGG FOO YUNG </h1>
+
 			<div class="column">
-				<div class="item">
-					<p>WON TON SOUP <span>$3.95/single &nbsp; &nbsp; $9/bowl</span></p>
-					<p class="desc">home-made pork won tons in a light broth</p>
-				</div>
-				<div class="item">
-					<p>HOUSE WOR WON TON SOUP <span>$15.50</span></p>
-					<p class="desc">won ton soup topped with an assorted stir-fried meats and vegetables</p>
-				</div>
 				<div class="item" style="border:none;">
-					<p>HOT &amp; SOUR SOUP <span>$5/single &nbsp; &nbsp; $10/bowl</span></p>
-					<p class="desc">a unique hot &amp; sour soup with assorted meats and vegetables, perfect for a chilly day </p>
+					<p>HOUSE SPECIAL EGG FOO YUNG <span>$12.95</span></p>
+					<p class="desc">pan-fried egg pancakes with shrimp, pork, chicken, and assorted veggies </p>
 				</div>
 			</div>
 			<div class="column" style="float: right;">
-				<div class="item">
-					<p>NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc"><strong>choose one: BEEF / CHICKEN / PORK / VEGETARIAN</strong>
-					<br><br>
-					egg noodles + your choice of topping + soup </p>
-				</div>
-				<div class="item">
-					<p>WON TON NOODLE SOUP <span>$9.00</span></p>
-					<p class="desc">egg noodles + won tons + soup </p>
-				</div>
 				<div class="item" style="border:none;">
-					<p>CHICKEN &amp; CREAM CORN SOUP <span>$10/regular &nbsp; &nbsp; $12.5/large</span></p>
-					<p class="desc">a chicken and corn soup finished with an egg swirl</p>
+					<p>EGG FOO YUNG <span>$10.95</span></p>
+					<p class="desc">pan-fried egg pancake + topping of choice </p>
 				</div>
 			</div>
 		</section>
